fixed problem with nav on iphone4

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -29,9 +29,6 @@ figcaption {
   margin: 10px 0 20px 0;
   color: inherit;
 }
-.container:first-child {
-  padding-top:30px;
-}
 .main-content>h2 {
   margin:0 0 20px 0;
   font-size: 1.3em;
@@ -91,6 +88,7 @@ a:hover {
   display: block;
   margin: 0 auto 20px auto;
   text-align: center;
+  width:100%;
 }
 .btn-container {
   width: 130px;
@@ -113,9 +111,6 @@ a:hover {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   border-radius: 10px;
-}
-.btn-icon:hover {
-
 }
 .icon {
   width: 60px;
@@ -155,7 +150,7 @@ a.thmlink {
 :::: Styles default.php ::::
 ----------------------------------------*/
 .main-content {
-  padding: 0 20px;
+  padding: 30px 0;
   max-width: 700px;
 }
 
